{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 143,
  "lineage": "65c3cbb8-9751-ea11-f90e-1801935e7c9c",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:557760777793:loadbalancer/app/tfg-alb/114da16c7c1503e6",
            "arn_suffix": "app/tfg-alb/114da16c7c1503e6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tfg-alb-90911323.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:557760777793:loadbalancer/app/tfg-alb/114da16c7c1503e6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tfg-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-069c355f71d038f44"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e1b9db7f68961117"
              },
              {
                "subnet_id": "subnet-0ffa0f00bb77f861e"
              }
            ],
            "subnets": [
              "subnet-0e1b9db7f68961117",
              "subnet-0ffa0f00bb77f861e"
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "terraform-aws-modules": "alb"
            },
            "vpc_id": "vpc-0f5c26d7ba45ca5b7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:557760777793:listener/app/tfg-alb/114da16c7c1503e6/47b363cfc8e881d7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:557760777793:targetgroup/tfg-tg/bfc364f578e385a7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:557760777793:listener/app/tfg-alb/114da16c7c1503e6/47b363cfc8e881d7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:557760777793:loadbalancer/app/tfg-alb/114da16c7c1503e6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:557760777793:targetgroup/tfg-tg/bfc364f578e385a7",
            "arn_suffix": "targetgroup/tfg-tg/bfc364f578e385a7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:557760777793:targetgroup/tfg-tg/bfc364f578e385a7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tfg-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f5c26d7ba45ca5b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "additional",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557760777793:security-group/sg-069c355f71d038f44",
            "description": "Security group for tfg-alb application load balancer",
            "egress": [],
            "id": "sg-069c355f71d038f44",
            "ingress": [],
            "name": "tfg-alb-20260418180652913700000006",
            "name_prefix": "tfg-alb-",
            "owner_id": "557760777793",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5c26d7ba45ca5b7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557760777793:security-group-rule/sgr-0ab221771c413e587",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ab221771c413e587",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-069c355f71d038f44",
            "security_group_rule_id": "sgr-0ab221771c413e587",
            "tags": {
              "Name": "tfg-alb-http"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "Name": "tfg-alb-http"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557760777793:security-group/sg-09e4995c3bf9afb0d",
            "description": "Permite trafico desde el ALB hacia la app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Salida a cualquier destino (p.ej. RDS en la VPC)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e4995c3bf9afb0d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALB_app_ingress",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069c355f71d038f44"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "tfg-app-sg",
            "name_prefix": "",
            "owner_id": "557760777793",
            "revoke_rules_on_delete": false,
            "tags": {
              "Module": "asg_ec2",
              "Project": "tfg"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "Module": "asg_ec2",
              "Project": "tfg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5c26d7ba45ca5b7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557760777793:security-group/sg-05f4afb0ee59f649a",
            "description": "Permite acceso a RDS unicamente desde la app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f4afb0ee59f649a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App to RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09e4995c3bf9afb0d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "tfg-rds-sg",
            "name_prefix": "",
            "owner_id": "557760777793",
            "revoke_rules_on_delete": false,
            "tags": {
              "Module": "rds",
              "Project": "tfg"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "Module": "rds",
              "Project": "tfg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5c26d7ba45ca5b7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.asg.aws_security_group.app",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557760777793:security-group/sg-0a91b118da90af6be",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a91b118da90af6be",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "557760777793",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "pre",
              "Name": "tfg-default-sg",
              "Project": "myproject"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "Environment": "pre",
              "Name": "tfg-default-sg",
              "Project": "myproject"
            },
            "vpc_id": "vpc-0f5c26d7ba45ca5b7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "additional_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_dc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557760777793:internet-gateway/igw-0367fa538227552f1",
            "id": "igw-0367fa538227552f1",
            "owner_id": "557760777793",
            "tags": {
              "Environment": "pre",
              "Name": "myproject-igw-ew1-tfg",
              "Project": "myproject"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "Environment": "pre",
              "Name": "myproject-igw-ew1-tfg",
              "Project": "myproject"
            },
            "vpc_id": "vpc-0f5c26d7ba45ca5b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_subnets_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0367fa538227552f1",
            "id": "r-rtb-075ddc41ade3dbaa91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-075ddc41ade3dbaa9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_dc",
            "module.vpc.aws_route_table.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0367fa538227552f1",
            "id": "r-rtb-0714692254dcf40801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0714692254dcf4080",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_dc",
            "module.vpc.aws_route_table.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_subnets_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets_horizontal_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets_horizontal_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets_horizontal_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets_isolated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557760777793:route-table/rtb-06510e895887579ea",
            "id": "rtb-06510e895887579ea",
            "owner_id": "557760777793",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "pre",
              "Name": "myproject-rt-ew1-tfg-private-a",
              "Project": "myproject"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "Environment": "pre",
              "Name": "myproject-rt-ew1-tfg-private-a",
              "Project": "myproject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5c26d7ba45ca5b7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557760777793:route-table/rtb-0aef9e70036e178e0",
            "id": "rtb-0aef9e70036e178e0",
            "owner_id": "557760777793",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "pre",
              "Name": "myproject-rt-ew1-tfg-private-b",
              "Project": "myproject"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "Environment": "pre",
              "Name": "myproject-rt-ew1-tfg-private-b",
              "Project": "myproject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5c26d7ba45ca5b7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets_vertical_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets_vertical_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets_vertical_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557760777793:route-table/rtb-075ddc41ade3dbaa9",
            "id": "rtb-075ddc41ade3dbaa9",
            "owner_id": "557760777793",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "pre",
              "Name": "myproject-rt-ew1-tfg-public-a",
              "Project": "myproject"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "Environment": "pre",
              "Name": "myproject-rt-ew1-tfg-public-a",
              "Project": "myproject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5c26d7ba45ca5b7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557760777793:route-table/rtb-0714692254dcf4080",
            "id": "rtb-0714692254dcf4080",
            "owner_id": "557760777793",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "pre",
              "Name": "myproject-rt-ew1-tfg-public-b",
              "Project": "myproject"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "Environment": "pre",
              "Name": "myproject-rt-ew1-tfg-public-b",
              "Project": "myproject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5c26d7ba45ca5b7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets_edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnets_horizontal_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnets_horizontal_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnets_horizontal_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnets_isolated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ab8785726f1884b",
            "route_table_id": "rtb-06510e895887579ea",
            "subnet_id": "subnet-0c70669cecf91f6c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_subnets_isolated",
            "module.vpc.aws_subnet.private_subnets_isolated",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fbfe38819818057",
            "route_table_id": "rtb-0aef9e70036e178e0",
            "subnet_id": "subnet-0fdb71a345cb6cfc6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_subnets_isolated",
            "module.vpc.aws_subnet.private_subnets_isolated",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnets_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnets_vertical_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnets_vertical_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnets_vertical_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079a21b62d894ce92",
            "route_table_id": "rtb-075ddc41ade3dbaa9",
            "subnet_id": "subnet-0e1b9db7f68961117"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073f2a7a1776f91b8",
            "route_table_id": "rtb-0714692254dcf4080",
            "subnet_id": "subnet-0ffa0f00bb77f861e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets_edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets_edge-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_horizontal_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_horizontal_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_horizontal_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_isolated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557760777793:subnet/subnet-0c70669cecf91f6c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c70669cecf91f6c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557760777793",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "pre",
              "Name": "myproject-sn-ew1-tfg-private-a",
              "Project": "myproject"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "Environment": "pre",
              "Name": "myproject-sn-ew1-tfg-private-a",
              "Project": "myproject"
            },
            "vpc_id": "vpc-0f5c26d7ba45ca5b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557760777793:subnet/subnet-0fdb71a345cb6cfc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fdb71a345cb6cfc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557760777793",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "pre",
              "Name": "myproject-sn-ew1-tfg-private-b",
              "Project": "myproject"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "Environment": "pre",
              "Name": "myproject-sn-ew1-tfg-private-b",
              "Project": "myproject"
            },
            "vpc_id": "vpc-0f5c26d7ba45ca5b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_vertical_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_vertical_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_vertical_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557760777793:subnet/subnet-0e1b9db7f68961117",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1b9db7f68961117",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557760777793",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "pre",
              "Name": "myproject-sn-ew1-tfg-public-a",
              "Project": "myproject"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "Environment": "pre",
              "Name": "myproject-sn-ew1-tfg-public-a",
              "Project": "myproject"
            },
            "vpc_id": "vpc-0f5c26d7ba45ca5b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557760777793:subnet/subnet-0ffa0f00bb77f861e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffa0f00bb77f861e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557760777793",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "pre",
              "Name": "myproject-sn-ew1-tfg-public-b",
              "Project": "myproject"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "Environment": "pre",
              "Name": "myproject-sn-ew1-tfg-public-b",
              "Project": "myproject"
            },
            "vpc_id": "vpc-0f5c26d7ba45ca5b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets_edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557760777793:vpc/vpc-0f5c26d7ba45ca5b7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0904ff59030569806",
            "default_route_table_id": "rtb-03bb0d426fd8fa0ee",
            "default_security_group_id": "sg-0a91b118da90af6be",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f5c26d7ba45ca5b7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03bb0d426fd8fa0ee",
            "owner_id": "557760777793",
            "tags": {
              "Environment": "pre",
              "Name": "myproject-vpc-ew1-tfg",
              "Project": "myproject"
            },
            "tags_all": {
              "Autor": "m.iglesia.suarez",
              "Environment": "pre",
              "Name": "myproject-vpc-ew1-tfg",
              "Project": "myproject"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc_ipam_preview_next_cidr.this"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}